Closed Bug 1059029 Opened 10 years ago Closed 10 years ago

Fix some tiled draw target bugs

Categories

(Core :: Graphics: Layers, defect)

29 Branch
x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla34

People

(Reporter: mattwoodrow, Assigned: mattwoodrow)

References

Details

Attachments

(1 file)

Just a few issues that cause us to fail reftests with tiling enabled. We sometime end up with a backbuffer even when HasInternalBuffer is true because we're producing content faster than we can upload. Not discarding the back buffer helps for that, and we have TileExpiry to make sure it goes away 'soon'
Attachment #8479518 - Flags: review?(nical.bugzilla)
Comment on attachment 8479518 [details] [diff] [review] tile-buffering-fixes Review of attachment 8479518 [details] [diff] [review]: ----------------------------------------------------------------- ::: gfx/layers/client/TiledContentClient.cpp @@ +1167,5 @@ > NS_roundf((dirtyRect->y - mSinglePaintBufferOffset.y) * mResolution), > drawRect.width, > drawRect.height); > gfx::IntPoint copyTarget(NS_roundf(drawRect.x), NS_roundf(drawRect.y)); > // Mark the newly updated area as invalid in the front buffer please update this comment too (front -> back)
Attachment #8479518 - Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla34
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: