Bug 1059029 - Fix buffer invalidation logic when using DrawTargetTiled. r=nical